Finalizando a página HTML

--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <title>Hello World</title>
 </head>
 <body>
-    
+ <header>
+        <h1>Hello World</h1>
+        <p> Olá, minha pessoa querida, fico feliz em ver você</p>
+
+ </header> 
+ 
+ <section>
+    <h2>HTML</h2>
+    <P>HTML HyperText Markup Language (Linguagem de Marcação de HiperTexto) é o bloco de construção mais básico da web. Define o significado e a estrutura do conteúdo da web.</P>
+
+    <h2>CSS</h2>
+    <P>CSS Cascading Style Sheet (Folha de estilo em cascata) é usado para estilizar elementos escritos em uma linguagem de marcação como HTML.</P>
+    <img src="download.jpg"
+
+ </section>
+
+ <footer>
+    <p>Uma página desenvolvida por Alura Star para aulas de Pensamento Computacional</p>
+
+
+ </footer>
+
 </body>
 </html>
