Criamos a estilização do site.

--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
  <header>
         <h1>Hello World</h1>
-        <p> Olá, minha pessoa querida, fico feliz em ver você</p>
+        <p> Olá, minha pessoa querida, fico feliz em ver <span id="nome-usuário">você</span></p>
 
  </header> 
  
  <section>
     <h2>HTML</h2>
-    <P>HTML HyperText Markup Language (Linguagem de Marcação de HiperTexto) é o bloco de construção mais básico da web. Define o significado e a estrutura do conteúdo da web.</P>
+    <P><span class="texto-inglês">HTML HyperText Markup Language</span> (Linguagem de Marcação de HiperTexto) é o bloco de construção mais básico da web. Define o significado e a estrutura do conteúdo da web.</P>
 
     <h2>CSS</h2>
-    <P>CSS Cascading Style Sheet (Folha de estilo em cascata) é usado para estilizar elementos escritos em uma linguagem de marcação como HTML.</P>
+    <P><span class="texto-inglês">CSS Cascading Style Sheet</span> (Folha de estilo em cascata) é usado para estilizar elementos escritos em uma linguagem de marcação como HTML.</P>
     <img src="download.jpg"
 
  </section>
