Construção do main.js

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
     <link rel="stylesheet" href="style.css">
+   
 </head>
 <body>
  <header>
         <h1>Hello World</h1>
-        <p> Olá, minha pessoa querida, fico feliz em ver <span id="nome-usuário">você</span></p>
+        <p> Olá, minha pessoa querida, fico feliz em te ver, <span id="nome-usuário">você</span></p>
 
  </header> 
  
@@ -20,14 +21,11 @@
     <h2>CSS</h2>
     <P><span class="texto-inglês">CSS Cascading Style Sheet</span> (Folha de estilo em cascata) é usado para estilizar elementos escritos em uma linguagem de marcação como HTML.</P>
     <img src="download.jpg"
-
  </section>
 
  <footer>
     <p>Uma página desenvolvida por Alura Star para aulas de Pensamento Computacional</p>
-
-
  </footer>
-
+ <script src="main.js"></script>
 </body>
 </html>
